# fastlane-mcp-server

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
docs/plans/: 2026-01-20-implementation-plan.md  2026-01-20-intelligent-assistant-design.md  2026-01-21-fastmcp-migration-design.md  2026-01-21-fastmcp-migration-plan.md
src/: index.ts  server.ts
src/config/: index.ts
src/discovery/: analyze.ts  capabilities.ts  index.ts  lanes.ts
src/discovery/__tests__/: analyze.test.ts  capabilities.test.ts  lanes.test.ts
src/errors/: diagnosis.ts  patterns.ts
src/errors/__tests__/: errors.test.ts
src/fastlane_mcp/: __init__.py  cli.py  server.py
src/fastlane_mcp/discovery/: __init__.py  lanes.py
src/fastlane_mcp/errors/: __init__.py  diagnosis.py  patterns.py
src/fastlane_mcp/plugins/: __init__.py  registry.py
src/fastlane_mcp/tools/: analyze.py  (+3 more)
src/handlers/: analyze.ts  appcenter.ts  build.ts  certificates.ts  firebase.ts  index.ts  lanes.ts  metadata.ts  plugins.ts  test.ts  version.ts  withPreflight.ts
src/plugins/: index.ts  registry.ts  signals.ts
src/test/: test-utils.ts
src/tools/: definitions.ts
src/types/: index.ts
src/utils/: executor.ts  logger.ts  sanitize.ts
src/validators/: environment.ts  index.ts  project.ts  tools.ts
tests/: conftest.py
tests/test_discovery/: __init__.py  test_lanes.py
tests/test_errors/: __init__.py  test_diagnosis.py  test_patterns.py
tests/test_plugins/: __init__.py  test_registry.py
tests/test_tools/: test_analyze.py  test_build.py  test_lanes.py  test_plugins.py
tests/test_utils/: test_executor.py  test_paths.py  test_sanitize.py
tests/test_validators/: test_environment.py  test_preflight.py  test_project.py  test_tools.py  test_types.py
(+17 files in other folders)
