[project]
name = "fastlane-mcp"
version = "0.2.0"
description = "Intelligent MCP server for iOS/Android builds with fastlane"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nicholas Prokesch" }
]
keywords = ["mcp", "fastlane", "ios", "android", "mobile", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
fastlane-mcp = "fastlane_mcp.server:mcp.run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastlane_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
